--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -45,13 +45,24 @@
 .articlesBox {
   width: 99vw;
   height: fit-content;
-  padding: 1rem;
+  // padding: 1rem;
   display: flex;
-  margin: auto auto;
+  // margin: auto auto;
   flex-direction: row;
   flex-wrap: wrap-reverse;
   position: relative;
   @include border(red);
+
+  @include desktop {
+    width: 99vw;
+    height: fit-content;
+    padding: 1rem;
+    display: flex;
+    margin: auto auto;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    position: relative;
+  }
 
   &__body {
     display: flex;
@@ -63,46 +74,48 @@
     @include border(green);
 
     .item {
-      width: 1000px;
+      width: 500px;
       height: 300px;
       margin: 10px auto;
       border-radius: 2px;
       display: flex;
-      flex-direction: row;
+      flex-direction: column ;
       justify-content: flex-start;
       cursor: pointer;
       background: $background;
       border-top: 5px solid #663399;
       transition: all 0.5s ease-in;
-      // box-shadow: 2px 12px 15px 1px lighten($background, 15%);
       @include border(brown);
       border-top: 2px solid $secondary;
       border-bottom: 2px solid $secondary;
       border-width: 5px;
+      position: relative;
 
       &:hover {
         border-left: 2px solid $primary;
         border-width: 5px;
-
-        // box-shadow: 2px 12px 15px 1px lighten(rgb(52, 91, 175), 40%);
       }
-
+      
       &__image {
         height: 100%;
-        width: 50%;
+        width: 100%;
         border-radius: 4px 4px 0 0;
         background: $secondary;
+        overflow: hidden;
+        position: absolute;
+        z-index: -10;
+        filter: blur(5px);
         @include border(green);
         img {
           height: 100%;
           width: 100%;
         }
       }
+      
       &__main {
-        width: 50%;
+        width: 100%;
         height: 250px;
-        
-        
+
         // background: blue;
         .meta-data {
           @include border(red);
@@ -111,7 +124,7 @@
             flex-direction: row;
 
             &-avatar {
-              img{
+              img {
                 height: 50px;
                 width: 50px;
                 border-radius: 50px;
@@ -129,7 +142,7 @@
                 font-size: 1rem;
               }
               span {
-                font-size:.8rem;
+                font-size: 0.8rem;
               }
             }
           }
@@ -161,7 +174,7 @@
             color: orange;
             @include border(violet);
           }
-          article{
+          article {
             width: inherit;
             height: 70px;
             overflow: hidden;
@@ -186,10 +199,140 @@
             border: none;
             padding: 0.5rem;
             cursor: pointer;
-            
           }
         }
       }
+      
+      
+      @include desktop {
+        width: 1000px;
+        height: 300px;
+        margin: 10px auto;
+        border-radius: 2px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        cursor: pointer;
+        background: $background;
+        border-top: 5px solid #663399;
+        transition: all 0.5s ease-in;
+        @include border(brown);
+        border-top: 2px solid $secondary;
+        border-bottom: 2px solid $secondary;
+        border-width: 5px;
+
+        &:hover {
+          border-left: 2px solid $primary;
+          border-width: 5px;
+        }
+        &__image {
+          height: 100%;
+          width: 50%;
+          border-radius: 4px 4px 0 0;
+          background: $secondary;
+          position: relative;
+          filter: blur(0);
+          @include border(green);
+          img {
+            height: 100%;
+            width: 100%;
+          }
+        }
+        
+      &__main {
+        width: 50%;
+        height: 250px;
+
+        // background: blue;
+        .meta-data {
+          @include border(red);
+          &-main {
+            display: flex;
+            flex-direction: row;
+
+            &-avatar {
+              img {
+                height: 50px;
+                width: 50px;
+                border-radius: 50px;
+              }
+            }
+            &-text {
+              // text-align: center;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              color: $primary;
+              // padding: .4rem;
+              @include border(#fff);
+              h3 {
+                font-size: 1rem;
+              }
+              span {
+                font-size: 0.8rem;
+              }
+            }
+          }
+        }
+        &__desc {
+          @include border(brown);
+          padding: 1rem;
+          display: flex;
+          height: fit-content;
+          flex-direction: column;
+          text-decoration: none;
+          justify-content: flex-start;
+
+          h2 {
+            word-wrap: break-word;
+            color: black;
+            height: 55px;
+            font-weight: 100;
+            font-size: 2.5rem;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-decoration: none;
+            @include border(red);
+          }
+          h3 {
+            font-size: 0.8rem;
+            text-decoration: none;
+            font-weight: 100;
+            color: orange;
+            @include border(violet);
+          }
+          article {
+            width: inherit;
+            height: 70px;
+            overflow: hidden;
+          }
+          p {
+            @include border(red);
+            overflow: hidden;
+            text-overflow: ellipsis;
+            height: 90px;
+            color: black;
+            font-weight: 100;
+          }
+        }
+        &__read__link {
+          width: inherit;
+          height: 40px;
+          @include border(red);
+          button {
+            background: none;
+            color: $primary;
+            width: 140px;
+            border: none;
+            padding: 0.5rem;
+            cursor: pointer;
+          }
+        }
+      }
+      }
+
+
+      
     }
   }
 }
