Removed header of the adminPage

--- a/src/css/blog/Adminpage/_adminpage.scss
+++ b/src/css/blog/Adminpage/_adminpage.scss
@@ -5,7 +5,7 @@
     @include border(red);
     //text-align: center;
     padding: 1rem;
-    // background: $secondary-blue;
+    background: $abstract;
 
     h2 {
       // background: $orange;
@@ -14,7 +14,7 @@
       color: #000;
       b {
         font-weight: 100;
-        color: $secondary
+        color: $secondary;
       }
     }
   }
@@ -54,7 +54,7 @@
           border: none;
           font-size: 1.2rem;
           cursor: pointer;
-          box-shadow: 5px 10px 20px 1px $secondary
+          box-shadow: 5px 10px 20px 1px $secondary;
         }
 
         &__desc {
@@ -102,7 +102,7 @@
           border: 1px solid #000;
           height: 30px;
           width: 30px;
-          padding: .5rem;
+          padding: 0.5rem;
           color: grey;
           cursor: pointer;
           border-radius: 30px;
@@ -115,9 +115,10 @@
         padding: 1rem;
       }
     }
+
+    // CSS rule for articles
     &__items {
       padding: 1rem;
-
 
       .item {
         width: 70%;
@@ -137,4 +138,264 @@
       }
     }
   }
-}
+
+  // Copied css
+  
+      .item {
+        width: 500px;
+        height: 300px;
+        margin: 10px 0;
+        border-radius: 2px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        cursor: pointer;
+        background: $background;
+        border-top: 5px solid #663399;
+        transition: all 0.5s ease-in;
+        @include border(brown);
+        border-top: 2px solid $secondary;
+        border-bottom: 2px solid $secondary;
+        border-width: 5px;
+        position: relative;
+
+        &:hover {
+          border-left: 2px solid $primary;
+          border-width: 5px;
+        }
+
+        &__image {
+          height: 100%;
+          width: 100%;
+          border-radius: 4px 4px 0 0;
+          background: $secondary;
+          overflow: hidden;
+          position: absolute;
+          z-index: -10;
+          filter: blur(5px);
+          @include border(green);
+          img {
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        &__main {
+          width: 100%;
+          height: 250px;
+
+          // background: blue;
+          .meta-data {
+            @include border(red);
+            &-main {
+              display: flex;
+              flex-direction: row;
+
+              &-avatar {
+                img {
+                  height: 50px;
+                  width: 50px;
+                  border-radius: 50px;
+                }
+              }
+              &-text {
+                // text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                color: $primary;
+                // padding: .4rem;
+                @include border(#fff);
+                h3 {
+                  font-size: 1rem;
+                }
+                span {
+                  font-size: 0.8rem;
+                }
+              }
+            }
+          }
+          &__desc {
+            @include border(brown);
+            padding: 1rem;
+            display: flex;
+            height: fit-content;
+            flex-direction: column;
+            text-decoration: none;
+            justify-content: flex-start;
+
+            h2 {
+              word-wrap: break-word;
+              color: black;
+              height: 55px;
+              font-weight: 100;
+              font-size: 2.5rem;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              text-decoration: none;
+              @include border(red);
+            }
+            h3 {
+              font-size: 0.8rem;
+              text-decoration: none;
+              font-weight: 100;
+              color: orange;
+              @include border(violet);
+            }
+            article {
+              width: inherit;
+              height: 70px;
+              overflow: hidden;
+            }
+            p {
+              @include border(red);
+              overflow: hidden;
+              text-overflow: ellipsis;
+              height: 90px;
+              color: black;
+              font-weight: 100;
+            }
+          }
+          &__read__link {
+            width: inherit;
+            height: 40px;
+            @include border(red);
+            button {
+              background: none;
+              color: $primary;
+              width: 140px;
+              border: none;
+              padding: 0.5rem;
+              cursor: pointer;
+            }
+          }
+        }
+
+        @include desktop {
+          width: 1000px;
+          height: 300px;
+          margin: 10px auto;
+          border-radius: 2px;
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          cursor: pointer;
+          background: $background;
+          border-top: 5px solid #663399;
+          transition: all 0.5s ease-in;
+          @include border(brown);
+          border-top: 2px solid $secondary;
+          border-bottom: 2px solid $secondary;
+          border-width: 5px;
+
+          &:hover {
+            border-left: 2px solid $primary;
+            border-width: 5px;
+          }
+          &__image {
+            height: 100%;
+            width: 50%;
+            border-radius: 4px 4px 0 0;
+            background: $secondary;
+            position: relative;
+            filter: blur(0);
+            @include border(green);
+            img {
+              height: 100%;
+              width: 100%;
+            }
+          }
+
+          &__main {
+            width: 50%;
+            height: 250px;
+
+            // background: blue;
+            .meta-data {
+              @include border(red);
+              &-main {
+                display: flex;
+                flex-direction: row;
+
+                &-avatar {
+                  img {
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
+                  }
+                }
+                &-text {
+                  // text-align: center;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  color: $primary;
+                  // padding: .4rem;
+                  @include border(#fff);
+                  h3 {
+                    font-size: 1rem;
+                  }
+                  span {
+                    font-size: 0.8rem;
+                  }
+                }
+              }
+            }
+            &__desc {
+              @include border(brown);
+              padding: 1rem;
+              display: flex;
+              height: fit-content;
+              flex-direction: column;
+              text-decoration: none;
+              justify-content: flex-start;
+
+              h2 {
+                word-wrap: break-word;
+                color: black;
+                height: 55px;
+                font-weight: 100;
+                font-size: 2.5rem;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                text-decoration: none;
+                @include border(red);
+              }
+              h3 {
+                font-size: 0.8rem;
+                text-decoration: none;
+                font-weight: 100;
+                color: orange;
+                @include border(violet);
+              }
+              article {
+                width: inherit;
+                height: 70px;
+                overflow: hidden;
+              }
+              p {
+                @include border(red);
+                overflow: hidden;
+                text-overflow: ellipsis;
+                height: 90px;
+                color: black;
+                font-weight: 100;
+              }
+            }
+            &__read__link {
+              width: inherit;
+              height: 40px;
+              @include border(red);
+              button {
+                background: none;
+                color: $primary;
+                width: 140px;
+                border: none;
+                padding: 0.5rem;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
