--- a/src/css/blog/Articlespage/_articlepage-header.scss
+++ b/src/css/blog/Articlespage/_articlepage-header.scss
@@ -1,8 +1,9 @@
 .ArticleHeader {
   height: 400px;
+  width: 100vw;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   background: $abstract;
   @include desktop {
@@ -13,12 +14,20 @@
   @include border(red);
 
   &__heading {
+    width: 250px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     color: $background;
     padding: 1rem;
+    z-index: 10;
+    @include desktop {
+      width: 450px;
+    }
     @include border(royalblue);
+    p {
+      width: inherit;
+    }
   }
   h1 {
     font-size: 3rem;
@@ -28,10 +37,13 @@
     text-decoration-color: $secondary;
   }
   .header__arts {
-    width: 400px; 
-    height: inherit;
+    @include phone {
+      width: 200px;
+      height: inherit;
+      position: relative;
+    }
     @include desktop {
-      width: inherit;
+      width: 500px;
     }
     @include border(pink);
 
