--- a/src/css/blog/_nav.scss
+++ b/src/css/blog/_nav.scss
@@ -2,16 +2,18 @@
 
 .nav {
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 100px;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   @include border(pink);
   padding: 0.1rem;
   color: $secondary;
+
   #menu-icon {
-    list-style-type:none;
-    width: 300px;
+    list-style-type: none;
+    width: 70px;
     height: 80px;
     padding: 0.3rem;
     z-index: 100;
@@ -36,30 +38,48 @@
     height: 80px;
     padding: 0.3rem;
     z-index: 100;
+    display: flex;
+    flex-direction: row-reverse;
+    // justify-content: space-around;
+    position: relative;
+    right: 00px;
 
     @include desktop {
       @include border(red);
       width: 650px;
       height: 80px;
       padding: 0.3rem;
+      position: relative;
+      right: 0px;
     }
 
     &__con {
+      height: 250px;
+      width: 300px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      justify-content: space-between;
+      justify-content: flex-start;
       padding: 0.5rem;
       background: black;
       z-index: 400;
+      position: absolute;
+      top: 90px;
+      box-shadow: 2px 2px 12px 3px #dad8d8;
+      @include border(green);
 
       @include desktop {
+        height: 250px;
+        width: 600px;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
         justify-content: space-around;
         padding: 0.5rem;
         background: none;
+        position: relative;
+        top: 00px;
+        box-shadow: none;
         @include border(blue);
       }
       @include border(blue);
