--- a/src/css/blog/_utilities.scss
+++ b/src/css/blog/_utilities.scss
@@ -16,7 +16,8 @@
     &:hover {
       background: $primary;
       color: $secondary;
-      box-shadow: 2px 12px 15px 1px lighten($secondary, 20%);
+      // box-shadow: 2px 12px 15px 1px lighten($secondary, 20%);
+      box-shadow: 0px 8px 40px 2px rgba(97, 94, 94, 0.637);
     }
     &:focus {
       box-shadow: 0 0 0 0;
