--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -1766,7 +1766,7 @@
         border: none;
         cursor: pointer;
         font-size: 1.2rem;
-        box-shadow: 2px 12px 15px 1px #7473e2; }
+        box-shadow: 0px 12px 25px 1px #9e9deb; }
         .sign__up__form__button button:hover {
           background: #0f0f47; }
       .sign__up__form__button h4 {
