--- a/client/src/css/blog/main.css
+++ b/client/src/css/blog/main.css
@@ -1916,6 +1916,9 @@
     margin-top: 30px;
     margin-bottom: 5px;
     border: 2px solid transparent; }
+    .footer__elem a {
+      text-decoration: none;
+      color: grey; }
     @media (min-width: 1024px) {
       .footer__elem {
         margin-bottom: 0px;
@@ -1932,6 +1935,9 @@
       padding: 1rem;
       flex-direction: row;
       justify-content: space-around; }
+      .footer__elem__socialmedia a {
+        text-decoration: none;
+        color: #fff; }
 
 body {
   font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
