--- a/client/src/css/blog/_config.scss
+++ b/client/src/css/blog/_config.scss
@@ -37,7 +37,7 @@ $tablet-width: 768px;
 $desktop-width: 1024px;
 
 @mixin phone {
-  @media(max-width: #{$tablet-width - 1}) {
+  @media (min-width: 376px) and (max-width: #{$tablet-width - 1}) {
     @content;
   }
 }
