Modified design for mobile devices

--- a/client/src/css/blog/CounsellingPage/_counsellingpage.scss
+++ b/client/src/css/blog/CounsellingPage/_counsellingpage.scss
@@ -111,6 +111,10 @@
       align-items: flex-end;
       height: 200px;
       @include border(red);
+
+      a {
+        color: grey;
+      }
     }
   }
 }
