--- a/client/src/css/blog/Homepage/_articles.scss
+++ b/client/src/css/blog/Homepage/_articles.scss
@@ -26,6 +26,12 @@
     justify-content: space-around;
     z-index: 300;
     @include border(red);
+    @include smallerPhones {
+      position: relative;
+      top: 0;
+      margin: 0;
+    }
+    
 
     @include desktop {
       margin: 0 0 0 100px;
@@ -53,6 +59,11 @@
       text-align: center;
       position: relative;
       @include border(green);
+
+      @include smallerPhones {
+        padding: 0rem;
+      }
+
     }
     .h2_2 {
       height: 100px;
@@ -62,7 +73,6 @@
         font-size: 4rem;
       }
     }
-
   }
   .articles__paragraph {
     @include border(cyan);
@@ -70,6 +80,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include smallerPhones {
+      height: 400px;
+    }
     // align-items: center;
 
     p {
@@ -91,6 +105,12 @@
         padding: 2rem;
         line-height: 1.5;
         color: $red;
+      }
+      @include smallerPhones {
+        width: 90vw;
+        height: 300px;
+        margin: 0;
+        
       }
     }
 
