--- a/client/src/css/blog/Homepage/_counselling.scss
+++ b/client/src/css/blog/Homepage/_counselling.scss
@@ -7,6 +7,10 @@
   margin-top: 2vh;
   @include border(blue);
 
+  @include smallerPhones {
+    height: 1200px;
+  }
+
   &__el {
     @include border(black);
     height: 500px;
@@ -72,6 +76,12 @@
         align-items: center;
         justify-content: space-around;
         @include border(red);
+        @include smallerPhones {
+          height: 550px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+        }
         & > div {
           display: flex;
           flex-direction: column;
@@ -80,6 +90,9 @@
           @include border(blue);
           width: 100%;
           align-items: flex-start;
+          @include smallerPhones {
+            // padding: 1rem;
+          }
           header {
             @include border(red);
             text-align: left;
