--- a/client/src/css/blog/_config.scss
+++ b/client/src/css/blog/_config.scss
@@ -5,7 +5,7 @@ $primary: #21209c;
 $red: #23120b;
 
 @mixin border($color) {
-  border: 2px solid $color;
+  border: 2px solid transparent;
 }
 
 @mixin shadow($color) {
