--- a/client/src/css/blog/_footer.scss
+++ b/client/src/css/blog/_footer.scss
@@ -19,16 +19,20 @@
   }
 
   &__elem {
-    flex-basis: 35%;
     height: 200px;
     padding: 1rem;
     // border-left: 1px solid grey;
     display: flex;
+    flex-basis: 35%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
     margin-bottom: 5px;
+    @include smallerPhones {
+      flex-basis: 50%;
+      padding: 1rem;
+    }
     a {
       text-decoration: none;
       color: grey;
@@ -43,6 +47,10 @@
       width: 200px;
       list-style: none;
       color: grey;
+      @include border(white);
+      @include smallerPhones {
+        padding: 0rem 1rem;
+      }
     }
 
     &__socialmedia {
