--- a/client/src/css/blog/_footer.scss
+++ b/client/src/css/blog/_footer.scss
@@ -1,13 +1,12 @@
 .footer {
   width: 100vw;
-  height: 480px;
+  height: 550px;
   background: $red;
   display: flex;
   flex-direction: column;
-  // justify-content: center;
-  // align-items: ;
   position: relative;
   margin: 0vh 0 0 0;
+  @include border(rgb(66, 63, 63));
 
   @include desktop {
     height: 400px;
@@ -30,8 +29,9 @@
     margin-top: 30px;
     margin-bottom: 5px;
     @include smallerPhones {
-      flex-basis: 50%;
+      flex-basis: 30%;
       padding: 1rem;
+      height: 190px;
     }
     a {
       text-decoration: none;
@@ -49,7 +49,7 @@
       color: grey;
       @include border(white);
       @include smallerPhones {
-        padding: 0rem 1rem;
+        padding: 0rem .5rem;
       }
     }
 
